--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "env-cmd": "^10.1.0",
     "mapbox-gl": "^1.13.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
